# rust-practice

./: .gitignore  README.md
db-sql/: Cargo.toml
db-sql/src/: errors.rs  main.rs  sql_parser.rs
db-sql/src/exec/: exec.rs  mod.rs  table.rs
db-sql/src/parser/: condition.rs  create.rs  delete.rs  insert.rs  mod.rs  select.rs
protocol-dns/: Cargo.toml  README.md
protocol-dns/data/: query_packet.txt  query_resp.txt
protocol-dns/src/: lib.rs  main.rs
protocol-dns/src/dns/: dns_header.rs  dns_packet.rs  dns_question.rs  dns_record.rs  errors.rs  mod.rs  packet_buf.rs  query_type.rs  result_code.rs
protocol-dns/src/service/: lookup.rs  lookup_recursively.rs  mod.rs  query_handler.rs
protocol-tls/: Cargo.toml  README.md
protocol-tls/src/: buffer.rs  codec.rs  crypto.rs  enums.rs  errors.rs  handshake.rs  lib.rs  macros.rs  main.rs
protocol-tls/src/defs/: enums.rs  mod.rs  record_header.rs  utils.rs
windows_syscall/x00_find_hwnd/: Cargo.toml  README.md  justfile
windows_syscall/x00_find_hwnd/src/: main.rs
windows_syscall/x01_hook_dll/src/: lib.rs
windows_syscall/x_01_hook_dll/: Cargo.toml  README.md  justfile
windows_syscall/x_01_hook_dll/src/: logger.rs
zero2prod/: .env  Cargo.toml  Dockerfile  conf.yaml  sqlx-data.json
zero2prod/conf/: base.yaml  development.yaml  production.yaml
zero2prod/migrations/: 20230303150732_create_subscription_table.sql
zero2prod/scripts/: init_db.sh
zero2prod/src/: conf.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
zero2prod/src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
zero2prod/src/routes/: subscriptions.rs
zero2prod/tests/: health_check.rs  shared.rs  subscriptions.rs
