[package]
name = "x_01_hook_dll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { version = "0.4" }
log4rs = { version = "1.3" }


# Windows sys-call interface
[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]
